test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_pointer_in_param_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(foo)
  (
  void
  (
  *
  identifier(bad_array)
  )
  [
  const int(3)
  ]
  )
  {
  return
  identifier(bad_array)
  ==
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
